# paas

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  go.work  go.work.sum  platform.toml.example
.claude/: settings.json
.claude/hooks/: session-context.sh
.claude/skills/antariksh/: SKILL.md
cli/: go.mod  go.sum  main.go
cli/cmd/: client.go  db.go  deploy.go  init.go  login.go  logs.go  open.go  regions.go  root.go  scale.go  secrets.go  ssh.go
cli/internal/manifest/: manifest.go  manifest_test.go
crates/edge-proxy/: Cargo.toml
crates/edge-proxy/src/: config.rs  main.rs  metrics.rs  proxy.rs  router.rs  shed.rs  tls.rs  wakeup.rs
crates/fc-driver/: Cargo.toml
crates/fc-driver/src/: driver.rs  firecracker.rs  jailer.rs  main.rs  network.rs  nomad_plugin.rs  snapshot.rs
dev/: docker-compose.yml  init-db.sql  install-toolchain.sh  zot-config.json
dev/grafana/provisioning/datasources/: datasources.yaml
dev/sample-app/: Dockerfile  platform.toml  server.go
dev/temporal-dynamicconfig/: development-sql.yaml
docs/: GLOSSARY.md  STATUS.md
docs/adr/: 0001-firecracker-microvms-on-nomad.md  0002-neon-engine-own-control-plane.md  0003-go-rust-language-split.md  0004-config-driven-jurisdiction-profiles.md  README.md
ops/consul/config/: client.hcl  server.hcl
ops/nomad/jobs/: control-plane-api.nomad.hcl  edge-proxy.nomad.hcl  nats.nomad.hcl  observability.nomad.hcl  vault.nomad.hcl
ops/vault/policies/: antariksh-api.hcl  edge-proxy-tls.hcl
services/api/: Dockerfile  go.mod
services/api/cmd/api/: auth.go  auth_test.go  deploy.go  deploy_test.go  main.go  regions.go  regions_test.go
services/api/internal/auth/: token.go  token_test.go
services/api/internal/deploystore/: store.go
services/api/internal/domain/: types.go
services/api/internal/regions/: regions.go
services/api/internal/scheduler/: client.go
services/billing/: Dockerfile  go.mod
services/billing/cmd/billing/: main.go
services/builder/: Dockerfile  go.mod
services/builder/cmd/builder/: main.go
services/dns/: Dockerfile  go.mod
services/dns/cmd/dns/: main.go
services/scheduler/: Dockerfile  go.mod
services/scheduler/cmd/scheduler/: main.go
services/scheduler/internal/buildrunner/: buildrunner.go  buildrunner_test.go
services/scheduler/internal/edgeproxy/: client.go  client_test.go
services/scheduler/internal/ipam/: ipam.go  ipam_test.go
services/scheduler/internal/nomadspec/: nomadspec.go  nomadspec_test.go
services/scheduler/internal/orchestrator/: orchestrator.go  orchestrator_test.go
services/scheduler/internal/runner/: exec.go
services/scheduler/internal/schedhttp/: server.go  server_test.go
services/storage-cp/: Dockerfile  go.mod
services/storage-cp/cmd/storage-cp/: main.go
